--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>COLOR CODES, DIMENSIONS VARIABLE, 2017</title>
   <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-    <link href="./Resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="https://yutingong.github.io/Color_Codes_2017/Resources/css/style.css" type="text/css" rel="stylesheet">
 <link rel="icon" href="./Resources/images/favicon.ico" type="image/x-icon">
 
 
@@ -22,25 +22,25 @@
     <div class="container">
 
 <div class="box1">
-      <a href="./box1.html" class="fill-div1"></a>
+      <a href="https://yutingong.github.io/Color_Codes_2017/box1.html" class="fill-div1"></a>
   </div>
 
   <div class="box2">
     </div>
 
     <div class="box3">
-        <a href="./box3.html" class="fill-div3"></a>
+        <a href="https://yutingong.github.io/Color_Codes_2017/box3.html" class="fill-div3"></a>
       </div>
 
       <div class="box4">
         </div>
 
         <div class="box5">
-          <a href="./box5.html" class="fill-div5"></a>
+          <a href="https://yutingong.github.io/Color_Codes_2017/box5.html" class="fill-div5"></a>
         </div>
 
           <div class="box6">
-            <a href="./box6.html" class="fill-div6"></a>
+            <a href="https://yutingong.github.io/Color_Codes_2017/box6.html" class="fill-div6"></a>
           </div>
 
             <div class="box7">
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="box9">
-                  <a href="./box9.html" class="fill-div9"></a>
+                  <a href="https://yutingong.github.io/Color_Codes_2017/box9.html" class="fill-div9"></a>
                   </div>
 
                   <div class="box10">
