--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>COLOR CODES, DIMENSIONS VARIABLE, 2017</title>
   <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="https://yutingong.github.io/Color_Codes_2017/Resources/css/style.css" type="text/css" rel="stylesheet">
-<link rel="icon" href="./Resources/images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="https://yutingong.github.io/Color_Codes_2017/Resources/images/favicon.ico" type="image/x-icon">
 
 
 
