--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div>
 
-  <h1><a href="https://github.com/yutingong/Color_Codes_2017.git">Open Source</a></h1>
+  <h1><a href="https://github.com/yutingong/Color_Codes_2017">Open Source</a></h1>
 
   </div>
 
