--- a/box1.html
+++ b/box1.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Box 1</title>
-    <link href="./Resources/css/box1_style.css" type="text/css" rel="stylesheet">
+    <link href="https://yutingong.github.io/Color_Codes_2017/Resources/css/box1_style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-<h1><a href="./index.html">< < <</a></h1>
+<h1><a href="https://yutingong.github.io/Color_Codes_2017/index.html">< < <</a></h1>
     <div class="container">
 
 
-<div class="box1"><a href="./index.html" class="fill-div1"></a>
+<div class="box1">
   </div>
-  <div class="box2"><a href="./index.html" class="fill-div1"></a>
+  <div class="box2">
     </div>
     <div class="box3">
       </div>
@@ -42,7 +42,7 @@
                           <div class="box15">
                           </div>
                             <div class="box16">
-                                <a href="./index.html" class="fill-div1"></a>
+                                <a href="https://yutingong.github.io/Color_Codes_2017/index.html" class="fill-div1"></a>
                             </div>
 
 
