--- a/box3.html
+++ b/box3.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Box 3</title>
-      <link href="./Resources/css/box3_style.css" type="text/css" rel="stylesheet">
+      <link href="https://yutingong.github.io/Color_Codes_2017/Resources/css/box3_style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1><a href="./index.html">< < <</a></h1>
+    <h1><a href="https://yutingong.github.io/Color_Codes_2017/index.html">< < <</a></h1>
     <div class="container">
 
   <div class="box1">
