--- a/box9.html
+++ b/box9.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Box 9</title>
-    <link href="./Resources/css/box9_style.css" type="text/css" rel="stylesheet">
+    <link href="https://yutingong.github.io/Color_Codes_2017/Resources/css/box9_style.css" type="text/css" rel="stylesheet">
 
 
   </head>
   <body>
-        <h1><a href="./index.html">< < <</a></h1>
+        <h1><a href="https://yutingong.github.io/Color_Codes_2017/index.html">< < <</a></h1>
 
     <div class="container">
 
