--- a/box5.html
+++ b/box5.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Box 5</title>
-      <link href="https://yutingong.github.io/Color_Codes_2017/Resources/css/box5_style.css" type="text/css" rel="stylesheet">
+      <link href="https://yutingong.github.io/colorcodes/Resources/css/box5_style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-        <h1><a href="https://yutingong.github.io/Color_Codes_2017/index.html">< < <</a></h1>
+        <h1><a href="https://yutingong.github.io/colorcodes/index.html">< < <</a></h1>
     <div class="container">
 
   <div class="box1">
