--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>COLOR CODES, DIMENSIONS VARIABLE, 2017</title>
   <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-    <link href="https://yutingong.github.io/Color_Codes_2017/Resources/css/style.css" type="text/css" rel="stylesheet">
-<link rel="icon" href="https://yutingong.github.io/Color_Codes_2017/Resources/images/favicon.ico" type="image/x-icon">
+    <link href="https://yutingong.github.io/colorcodes/Resources/css/style.css" type="text/css" rel="stylesheet">
+<link rel="icon" href="https://yutingong.github.io/colorcodes/Resources/images/favicon.ico" type="image/x-icon">
 
 
 
@@ -15,32 +15,32 @@
 
     <div>
 
-  <h1><a href="https://github.com/yutingong/Color_Codes_2017">Open Source</a></h1>
+  <h1><a href="https://github.com/yutingong/colorcodes">Open Source</a></h1>
 
   </div>
 
     <div class="container">
 
 <div class="box1">
-      <a href="https://yutingong.github.io/Color_Codes_2017/box1.html" class="fill-div1"></a>
+      <a href="https://yutingong.github.io/colorcodes/box1.html" class="fill-div1"></a>
   </div>
 
   <div class="box2">
     </div>
 
     <div class="box3">
-        <a href="https://yutingong.github.io/Color_Codes_2017/box3.html" class="fill-div3"></a>
+        <a href="https://yutingong.github.io/colorcodes/box3.html" class="fill-div3"></a>
       </div>
 
       <div class="box4">
         </div>
 
         <div class="box5">
-          <a href="https://yutingong.github.io/Color_Codes_2017/box5.html" class="fill-div5"></a>
+          <a href="https://yutingong.github.io/colorcodes/box5.html" class="fill-div5"></a>
         </div>
 
           <div class="box6">
-            <a href="https://yutingong.github.io/Color_Codes_2017/box6.html" class="fill-div6"></a>
+            <a href="https://yutingong.github.io/colorcodes/box6.html" class="fill-div6"></a>
           </div>
 
             <div class="box7">
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="box9">
-                  <a href="https://yutingong.github.io/Color_Codes_2017/box9.html" class="fill-div9"></a>
+                  <a href="https://yutingong.github.io/colorcodes/box9.html" class="fill-div9"></a>
                   </div>
 
                   <div class="box10">
