--- a/box3.html
+++ b/box3.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Box 3</title>
       <link href="https://yutingong.github.io/colorcodes/Resources/css/box3_style.css" type="text/css" rel="stylesheet">
+<link rel="icon" href="https://yutingong.github.io/colorcodes/Resources/images/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <h1><a href="https://yutingong.github.io/colorcodes/index.html">< < <</a></h1>
