--- a/box6.html
+++ b/box6.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Box 3</title>
       <link href="https://yutingong.github.io/colorcodes/Resources/css/box6_style.css" type="text/css" rel="stylesheet">
+<link rel="icon" href="https://yutingong.github.io/colorcodes/Resources/images/favicon.ico" type="image/x-icon">
   </head>
   <body>
 
