--- a/box9.html
+++ b/box9.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Box 9</title>
     <link href="https://yutingong.github.io/colorcodes/Resources/css/box9_style.css" type="text/css" rel="stylesheet">
-
+<link rel="icon" href="https://yutingong.github.io/colorcodes/Resources/images/favicon.ico" type="image/x-icon">
 
   </head>
   <body>
