--- a/box3.html
+++ b/box3.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Box 3</title>
+    <title>COLOUR CODES, DIMENSIONS VARIABLE, 2017</title>
       <link href="https://yutingong.github.io/colorcodes/Resources/css/box3_style.css" type="text/css" rel="stylesheet">
 <link rel="icon" href="https://yutingong.github.io/colorcodes/Resources/images/favicon.ico" type="image/x-icon">
   </head>
