--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>COLOR CODES, DIMENSIONS VARIABLE, 2017</title>
+    <title>COLOUR CODES, DIMENSIONS VARIABLE, 2017</title>
   <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="https://yutingong.github.io/colorcodes/Resources/css/style.css" type="text/css" rel="stylesheet">
 <link rel="icon" href="https://yutingong.github.io/colorcodes/Resources/images/favicon.ico" type="image/x-icon">
