--- a/index.html
+++ b/index.html
@@ -6,16 +6,37 @@
   <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="https://yutingong.github.io/colorcodes/Resources/css/style.css" type="text/css" rel="stylesheet">
 <link rel="icon" href="https://yutingong.github.io/colorcodes/Resources/images/favicon.ico" type="image/x-icon">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
+<script src="https://yutingong.github.io/colorcodes/main.js"></script>
 
 
 
   </head>
   <body>
 
+        <span class="toggle-button">
+             <div class="menu-bar menu-bar-top"></div>
+             <div class="menu-bar menu-bar-middle"></div>
+             <div class="menu-bar menu-bar-bottom"></div>
+        </span>
+        <div class="menu-wrap">
+            <div class="menu-sidebar">
+                <ul class="menu">
+                  <li><a href="https://yutingong.github.io/colorcodes/index.html">Color Codes #1</a></li>
+
+                    <li><a href="https://github.com/yutingong/colorcodes">Open Source</a></li>
+
+  <li><a href="https://yutingong.github.io/color_codes_2/index.html">Color Codes #2</a></li>
+                    <li><a href="mailto:yutingong@icloud.com">Contact</a></li>
+                    <li><a href="https://github.com/yutingong">Github</a></li>
+                </ul>
+            </div>
+        </div>
+
 
     <div>
 
-  <h1><a href="https://github.com/yutingong/colorcodes">Open Source</a></h1>
+
 
   </div>
 
@@ -61,7 +82,7 @@
               <footer>
                 <div class="footer">
 
-<p>Color Codes, html + css, dimensions variable, 2017, copyright yutingong.com</p>
+<p>Color Codes #1, html + css, dimensions variable, 2017, copyright yutingong.com</p>
             </div></footer>
 
 
