--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>COLOUR CODES, DIMENSIONS VARIABLE, 2017</title>
+    <title>COLOR CODES #1, 2017</title>
   <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="https://yutingong.github.io/colorcodes/Resources/css/style.css" type="text/css" rel="stylesheet">
 <link rel="icon" href="https://yutingong.github.io/colorcodes/Resources/images/favicon.ico" type="image/x-icon">
@@ -26,7 +26,7 @@
 
                     <li><a href="https://github.com/yutingong/colorcodes">Open Source</a></li>
 
-  <li><a href="https://yutingong.github.io/color_codes_2/index.html">Color Codes #2</a></li>
+  <li><a href="https://yutingong.github.io/colorcodes2/index.html">Color Codes #2</a></li>
                     <li><a href="mailto:yutingong@icloud.com">Contact</a></li>
                     <li><a href="https://github.com/yutingong">Github</a></li>
                 </ul>
