--- a/box1.html
+++ b/box1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>COLOUR CODES, DIMENSIONS VARIABLE, 2017</title>
+    <title>COLOR CODES #1, 2017</title>
     <link href="https://yutingong.github.io/colorcodes/Resources/css/box1_style.css" type="text/css" rel="stylesheet">
 <link rel="icon" href="https://yutingong.github.io/colorcodes/Resources/images/favicon.ico" type="image/x-icon">
   </head>
